<resources>
    <string name="app_name">ShareT</string>
    <string name="hint_add_button_text">ADD A SHARED RESOURCE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_shared_resource_text">Add your shared resource</string>
    <string name="home">Home</string>
    <string name="calendar">Calendar</string>
    <string name="profile">Profile</string>
    <string name="create_resource">Create your shared resource</string>
    <string name="name">Name</string>
    <string name="create">Create</string>
    <string name="shared_resource_results">Shared Resource List</string>
    <string name="close">Close</string>
    <string name="clear_text">Clear</string>
    <string name="save">Save</string>
    <string name="calendar_input_dialog_title">Enter event title</string>
    <string name="calendar_empty_input_text">Text is empty</string>
    <string name="calendar_dialog_delete_confirmation">Delete this event?</string>
    <string name="delete">Delete</string>
    <string name="calendar_title">Shared Resource Calendar</string>
    <string name="event_name">Enter reservation name</string>
    <string name="reservation_title">Create your reservation</string>
    <string name="fill_fields">Please, fill in all fields.</string>
    <string name="time_error">Please, start time must be earlier than end time.</string>
    <string name="alert_delete">Are you sure?</string>
    <string name="loose_delete">You will permanently lose all reservations.</string>


    <string name="login_btn">Login</string>
    <string name="login_prompt">Login to access ShareT app!</string>
    <string name="login_button_text">Login</string>
    <string name="logout_button_text">Logout</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="time_not_defined">_________</string>
    <string name="time_hint">00:00</string>
    <string name="share_resource_text">Add users to share your resource</string>
    <string name="username_text">Username</string>
    <string name="add_user">Add user</string>
    <string name="email_text">Email</string>
    <string name="welcome_to_sharet_app">Welcome to ShareT app!</string>
    <string name="read_mobile_sensor">Read mobile sensor</string>
    <string name="magnetic_text">Here you can read the magnetic sensor values of your phone!</string>
    <string name="magnetic_x_coordinate">Magnetic X coordinate:</string>
    <string name="magnetic_y_coordinate">Magnetic Y coordinate:</string>
    <string name="magnetic_z_coordinate">Magnetic Z coordinate:</string>
    <string name="full_name">Full name:</string>
    <string name="about_you">About you</string>
    <string name="e_mail">E-mail:</string>
    <string name="fullname">User fullname</string>
    <string name="id_user">Id user</string>
</resources>