<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <data>
        <variable
            name="customDialogCalendarViewModel"
            type="it.sapienza.macc.sharet.customdialogcalendar.CustomDialogCalendarViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/round_corner"
        tools:context=".customdialogcalendar.CustomDialogCalendarFragment">

        <TextView
            android:id="@+id/reservation_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/reservation_title"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_margin="25dp"/>

        <TextView
            android:id="@+id/create_event_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:textSize="17sp"
            android:text="@string/event_title" />

        <EditText
            android:id="@+id/name_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/submit_create_event_button"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="@string/create"
            android:textSize="17sp"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>
</layout>