<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data>
        <variable
            name="sharedResourceViewModel"
            type="it.sapienza.macc.sharet.sharedresource.SharedResourceViewModel" />
    </data>

    <LinearLayout
        android:id="@+id/profileConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".sharedresource.SharedResourceFragment">

        <Button
            android:id="@+id/logout_button"
            android:layout_width="119dp"
            android:layout_height="47dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:text="@string/logout_button_text"
            app:icon="@drawable/ic_baseline_exit_to_app_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/sensor_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/read_mobile_sensor"
            android:layout_gravity="center"
            app:icon="@drawable/ic_baseline_android_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logout_button" />


        <Button
            android:id="@+id/add_resource_button"
            android:layout_width="314dp"
            android:layout_height="57dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:onClick="@{() -> sharedResourceViewModel.onAddResourceButtonClicked()}"
            android:text="@string/add_shared_resource_text"
            app:icon="@android:drawable/ic_input_add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sensor_button"
            app:layout_constraintVertical_bias="0.0" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/your_id_is_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:fontFamily="@font/roboto"
                android:text="Your user ID is:"
                android:textSize="17sp"/>

            <TextView
                android:id="@+id/idUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:fontFamily="@font/roboto"
                android:text=""
                android:textColor="@color/purple_700"
                android:textSize="20sp" />

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/holo_purple"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvSharedResource"
            android:layout_width="match_parent"
            android:layout_marginTop="18dp"
            android:layout_height="473sp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_resource_button"
            app:layout_constraintVertical_bias="1.0" />

    </LinearLayout>

</layout>